*** empty log message ***

--- a/EAssari/www/styles/titotrainer.css
+++ b/EAssari/www/styles/titotrainer.css
@@ -89,13 +89,13 @@ select {
 }
 
 #showStatistics {
-	left-margin: auto;
-	right-margin: auto;
+/*	left-margin: auto;*/
+/*	right-margin: auto;*/
 }
 
 #composer {
-	left-margin: auto;
-	right-margin: auto;
+/*	left-margin: auto;*/
+/*	right-margin: auto;*/
 }
 
 #composer #ttk91Table {
